--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/x-icon" href="#">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css">
-    <meta name="description" content="欢迎来到Leleo的奇妙世界！">
-    <meta name="keywords" content="Leleo,leleo,个人主页,个人网站">
+    <meta name="description" content="欢迎来到桑榆客栈">
+    <meta name="keywords" content="桑榆,sangyu,blog,博客">
     <title></title>
   </head>
   <body>
