--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <meta name="description" content="欢迎来到桑榆客栈">
     <meta name="keywords" content="桑榆,sangyu,blog,博客">
-    <title></title>
+    <title>桑榆客栈</title>
   </head>
   <body>
     <div id="app"></div>
